Bug 441223 - Presetting of "jpg" is ignored while scanning
Summary: Presetting of "jpg" is ignored while scanning
Status: RESOLVED FIXED
Alias: None
Product: Skanlite
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1.0.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Kåre Särs
URL:
Keywords:
: 444570 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-08-20 09:26 UTC by Matthias Hermanns
Modified: 2021-10-30 08:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthias Hermanns 2021-08-20 09:26:03 UTC
SUMMARY

STEPS TO REPRODUCE
1. Set settings "Name & Format" to "jpg" -> value is changed correctly

OBSERVED RESULT
2. But while scanning skanlite offers always "png" again, that proposition has to be changed every time manually to "jpeg"
3. The bug van be reproduced on other computers

EXPECTED RESULT
4. Skanlite should suggest to save the file as a "jpg"-media type, as indicated in the settings.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Perhaps there is a confusion between "jpg" and "jpeg" in the programming?
Comment 1 Bug Janitor Service 2021-09-08 14:29:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/skanlite/-/merge_requests/17
Comment 2 Alexander Stippich 2021-09-09 17:37:38 UTC
Git commit 2bcd0daf6ab65a62d5d121efddd0acac50f3242b by Alexander Stippich.
Committed on 09/09/2021 at 17:36.
Pushed by astippich into branch 'master'.

fix preselecting the image format
with the one from the settings dialog.
image/+fileSuffix does not always correspond to the mimetype
Related: bug 419274

M  +55   -9    src/SaveLocation.cpp
M  +5    -4    src/SaveLocation.h
M  +21   -24   src/skanlite.cpp
M  +0    -1    src/skanlite.h

https://invent.kde.org/graphics/skanlite/commit/2bcd0daf6ab65a62d5d121efddd0acac50f3242b
Comment 3 Alexander Stippich 2021-10-30 08:54:09 UTC
*** Bug 444570 has been marked as a duplicate of this bug. ***