fix preselecting the image format with the one from the settings dialog. image/+fileSuffix does not always correspond to the mimetype

BUG: 441223
BUG: 419274